# kalshi-polymarket-tracker

./: .gitignore  LICENSE  README.md  anomaly_scanner.py  classifier.py  cli.py  config.yaml  demo_research_filtering.py  excel_reporter.py  kalshi-pm-analyzer  kalshi_client.py  kalshi_cron.py  market_clusterer.py  opportunity_manager.py  orchestrator.py  pipeline_run_log.py  polymarket_client.py  polymarket_scanner.py  pyproject.toml  research_utils.py  scanner.py  search_brave.py  search_helper.py  search_startpage.py
.claude/: settings.local.json
docs/: two-phase-classifier.md
kalshi-video/: deck.html  script.py
scripts/: challenge_certain.py  check_research.py  classify_all.py  classify_all_128.py  classify_all_141.py  reset_classified.py  run_batch_research.py  run_batch_research_fast.py  run_research_batch.py  verify_classifications.py
skills/: README.md
skills/kalshi-tracker/: SKILL.md
skills/kalshi-tracker/references/: agentic-pipelines-landscape.md  anomaly-classification.md  bulk-classification.md  category-filtering.md  formula-audit-log.md  formula-audit-procedure.md  ipos-2026.md  pitfalls.md  scan-procedure.md  settlement-filter.md  two-phase-pipeline.md
skills/two-phase-kalshi-classifier/: SKILL.md
skills/two-phase-kalshi-classifier/references/: fact-check-cases-20260523.md  resolution-rules.md
